<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        style="@style/matchwrap"
        android:id="@+id/root_layout"
        android:background="@color/black"
        android:orientation="vertical"
        android:minHeight="350dp">

        <LinearLayout
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/margin_ten">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gray"
                android:minWidth="100dp"
                android:minHeight="10dp"
                android:orientation="horizontal" />

        </LinearLayout>

        <TextView
            style="@style/wrapwrap"
            android:textColor="@color/white"
            android:text="@string/report"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="@dimen/text_size_seventeen"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            android:layout_marginTop="@dimen/margin_ten"
            android:layout_marginBottom="@dimen/margin_ten"/>

        <TextView
            style="@style/wrapwrap"
            android:textColor="@color/white"
            android:text="@string/why_are_you_reporting_this_post"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="@dimen/text_size_seventeen"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/margin_ten"/>


        <TextView
            android:id="@+id/spam"
            style="@style/wrapwrap"
            android:textColor="@color/white"
            android:text="@string/spam"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/text_size_seventeen"
            android:layout_marginStart="@dimen/margin_ten"
            android:layout_marginTop="@dimen/margin_fifteen"
            android:padding="@dimen/margin_ten"/>

        <TextView
            android:id="@+id/appropriate"
            style="@style/wrapwrap"
            android:textColor="@color/white"
            android:text="@string/appropriate"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/text_size_seventeen"
            android:layout_marginStart="@dimen/margin_ten"
            android:layout_marginTop="@dimen/margin_fifteen"
            android:padding="@dimen/margin_ten"/>


    </LinearLayout>
</layout>