<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#80000000"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        android:orientation="vertical"
        android:padding="@dimen/margin_twenty"
        android:background="@drawable/bg_white_rectangle_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_fifteen">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure_you_want_todiscard"
                android:textSize="@dimen/text_size_fourteen"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center" />

        </LinearLayout>


        <TextView
            android:id="@+id/btnDiscard"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/discard"
            android:textSize="@dimen/text_size_sixteen"
            android:padding="@dimen/margin_fifteen"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin_twenty"
            android:layout_marginBottom="@dimen/margin_fifteen"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_matterhorn_fill_30"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center_horizontal"
            />


        <TextView
            android:id="@+id/btnKeep"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/keep"
            android:textSize="@dimen/text_size_sixteen"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/margin_fifteen"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center_horizontal"
            />
    </LinearLayout>
</LinearLayout>
