<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="#80000000"
    >
    <LinearLayout
        android:layout_width="@dimen/popup_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_twenty"
        android:background="@drawable/bg_white_rectangle_20"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_twenty"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure"
                android:textSize="@dimen/text_size_sixteen"
                android:drawableTop="@drawable/ic_cross_img"
                android:drawablePadding="@dimen/margin_twenty_five"
                android:padding="@dimen/margin_five"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_you_realy_want_decline"
                android:textSize="@dimen/text_size_fourteen"
                android:padding="@dimen/margin_five"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="@dimen/margin_thirty"
            android:layout_marginBottom="@dimen/margin_fifteen"

            >
            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/cancel"
                android:textSize="@dimen/text_size_sixteen"
                android:padding="@dimen/margin_fifteen"
                android:textColor="@color/white"
                android:layout_marginRight="@dimen/margin_five"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_button_pink"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/btnDecline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/decline"
                android:layout_marginLeft="@dimen/margin_five"
                android:textSize="@dimen/text_size_sixteen"
                android:padding="@dimen/margin_fifteen"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_gray_border_8"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center_horizontal"
                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
